# GermanListeningPipeline-Langgraph

./: .gitignore  CLAUDE.md  GermanListeningCLI.spec  README.md
Requirement/: Requirement B1-3-1 - German Listening (B1).md  Requirement B1-3-2 - Validation Check.md  Requirement B1-3-3 - Audio Split and Subtitles.md  Requirement B1-4-1 - Marker-Based German Listening (B1).md  Requirement B1-4-2 - Marker-Based Validation Check.md  (+10 more)
Tools/: README.md  pyproject.toml
Tools/src/: glist_pipeline_entry.py
Tools/src/glist_pipeline/: __init__.py  apply_boundaries_cli.py  apply_boundary_suggestions.py  blocks.py  cli.py  enrich_cli.py  enrich_llm.py  glossary_policy.py  hitl.py  labels.py  langgraph_app.py  legacy_runner.py  llm_provider.py  markdown.py  mode_router.py  models.py  parser.py  quality_gate.py  runtime_paths.py  semantic_generate.py  splitter.py  srt.py  suggest_boundaries.py  suggest_boundaries_cli.py
Tools/src/glist_pipeline/legacy/: __init__.py  check_listening_2.py  check_listening_4.py  generate_listening_2.py  generate_listening_4.py  split_and_subtitle.py  split_and_subtitle_4.py  split_run_summary.py
Tools/src/glist_pipeline/modes/: __init__.py  classic.py  marker.py
Tools/tests/: test_boundary_apply.py  test_cli_menu.py  test_enrich_llm.py  test_filename_contracts.py  test_hitl_state_machine.py  test_label_taxonomy.py  test_latest_audio_selection.py  test_mode_router.py  test_parser_markdown.py  test_quality_gate.py  test_semantic_generate.py  test_wave1_fixtures.py
Tools/tests/fixtures/: fixture_manifest.json  sample_transcript.json
(+35 files in other folders)
