[project]
name = "german-listening-tools"
version = "0.1.0"
description = "German listening pipeline with LangGraph orchestration and HITL labels"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
pipeline = ["langgraph>=0.2.0"]
ai = ["openai>=1.40.0"]

[project.scripts]
glist = "glist_pipeline.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
